--- a/index.html
+++ b/index.html
@@ -46,15 +46,12 @@
                 <img src="#" class="pictureActual">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
-            <div class="picture">
-                <img src="#" class="pictureActual">
-                <div class="subtext">this is some subtext under an illustration or image</div>
-            </div>
         </div>
     </div>
 
     <div class="quote">
-        <div>quote</div>
+        <div class="quoteProper">This is an inspiring quote, or a testimonial from a customer. Mayber it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="citation">-Thor, God of Thunder</div>
     </div>
 
     <div class="signup">
