Create signup section + footer

--- a/index.html
+++ b/index.html
@@ -55,11 +55,19 @@
     </div>
 
     <div class="signup">
-        <div>signup</div>
+        <div class="signupBox">
+            <div class="signupLeft">
+                <div class="signupLeftHeader">Call to action! It's time!</div>
+                <div class="signupLeftText">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="signupRight">
+                <button class="signupButtonTwo">Sign up</button>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
-        <div>footer</div>
+        <div>Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
